--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -4,7 +4,7 @@
     <title>&lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making Through Data Integration &amp; Software Development</title>
     <meta charset="utf-8" />
     <meta name="author" content="Jessica L. BurnettResearch Ecologist, Mendenhall Postdoctoral Fellow" />
-    <meta name="date" content="2019-10-12" />
+    <meta name="date" content="2019-10-13" />
     <link rel="stylesheet" href="css/myFonts.css" type="text/css" />
     <link rel="stylesheet" href="css/myTheme.css" type="text/css" />
   </head>
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 # &lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making Through Data Integration &amp; Software Development</font>
 ### <font size='12'><strong>Jessica L. Burnett</strong></font></br></br><font size='6'>Research Ecologist, Mendenhall Postdoctoral Fellow</font>
 ### Science Analytics and Synthesis | Core Science Systems</br>U.S. Geological Survey, Lakewood CO
-### October 12, 2019
+### October 13, 2019
 
 ---
 
@@ -25,88 +25,92 @@ background-size: 10%
 background-position: left 110px bottom 10px 
 ---
 
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 1--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide02.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 2--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide03.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 3--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide04.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 4--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide05.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 5--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide06.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 6--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide08.png" width="100%" /&gt;
 ]
 
 ---
 
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 7--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide09.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 8--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide10.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 9--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide11.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 10--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide12.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 11--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide13.png" width="100%" /&gt;
 ]
 
 ---
-# &lt;!--My work build --&gt; 
+# &lt;!--My Past Work 12--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide14.png" width="100%" /&gt;
 ]
+???
+- In the business model -- we typically wouldn't waste money and time creating products without doing some sort of research, or like focus group to identify if and how the product would be used.
+- Research ecologists wokr in bubble--create products in isolation--get feedback from eachother RATHER than the end-users!
+- E.g., what would it take (hours, time, networks) for a research ecologist to reach out to *potential* end users of the data or software product -- is it worth their time? Is there a way we can make this more efficient (this is more of a career goal i think). This requires a cultural shift
 ---
-# &lt;!--Data Flow1--&gt; 
-.center[&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;
-&lt;img src="/images/my_research.png" width="100%" /&gt;
-]
+
+class: inverse, left, middle
+# Flow of Science Products and Knowledge
+???
+- transition
 ---
 # Data and Science Products Often Flow Linearly
 .center[
 &lt;img src="/images/use_continuum/Slide1.png" width="100%" /&gt;
 ]
-.footnote[[*] Ecological Society of America conference 2020 theme]
 ???
 - A typical trajectory of a science or data product flows from you, the data collector, curator, or manager --&gt; research community --&gt; maybe to practiioners
 - If you're either lucky or the product is vital or really amazing, maybe it will trickle up to decision makers?
@@ -129,11 +133,8 @@ background-position: left 110px bottom 10px
   - perhaps you conduct basic research, or are a natural historian
   - or maybe this is an overwhelming task that may not necessarily be rewarded within your community or profession?
 - There's a reason for these question marks -- __this is a daunting task!__
-- 
 ---
-class: inverse, middle, center
-# 
----
+
 # &lt;!--Roughgarden Quote--&gt;
 &lt;/br&gt;&lt;/br&gt;&lt;/br&gt;
 &gt; 'Most models in ecology are inteded for other ecologists, cooked up by scientists for consumption by other scientists'   _Roughgarden (1979)_  
@@ -157,6 +158,13 @@ class: inverse, middle, center
 - When I first came across this quote -- and it definitely was a mistake because I definitely was not reading her book when I found it! -- I couldnt get it out of my head. 
 - I think we can replace the word, models, here with other words, like 'data', 'results', 'articles', 'presentations', etc.
 ---
+---
+class: inverse, left, middle
+# USGS: Leading Efforts to Avoid the Linear Trajectory of Data and Science Products
+&lt;/br&gt;&lt;/br&gt;
+--
+&lt;img src="/images/koolaid.jpg" width="20%" /&gt;
+---
 # USGS Science Analytics &amp; Synthesis
 &lt;/br&gt;
 __Vision__: Synthesize and deliver Earth system data and information.
@@ -174,26 +182,6 @@ __Mission__: Accelerate research and decisionmaking through data science, inform
 - Briefly, I am in a group of the Core Science Systems mission area of the USGS called Science Analytics and Synthesis. 
 ---
 
-# Harnessing the Data Revolution in Ecology
-
-.pull-left[
-&lt;img src="/images/poisot2019.png" width="90%" /&gt;
-]
---
-.pull-right[
-&lt;img src="/images/fair.png" width="100%" /&gt;
-]
-
-???
-- Next year's theme is ...
-- Not surprising given the amount and quality of data. 
-- However, there's still much work to be done, especially on front of open science. 
-- that is, full reproducibilty of our data, results, and other knowledge products
-- And I have recently joined a branch within the USGS which is leading efforts to achieve such a culture within relevant sciences. 
-
----
-class: inverse, center, middle
-class: inverse, center, middle
 # Abandoning a Linear Flow of Ecological Data and Knowledge Flow
 ---
 # Project Overview &lt;!--1--&gt;
@@ -229,7 +217,7 @@ class: inverse, center, middle
 
 ---
 
-class:inverse, middle, left
+class: inverse, left, middle
 # 1. Data Integration
 # 2. Integrated Population Models
 # 3. Software
@@ -238,6 +226,13 @@ class:inverse, middle, left
 - 
 - Over the course of my postdoc, I will be 
 
+---
+---
+class: inverse, left, middle
+# 1. __Data Integration__
+# 2. Integrated Population Models
+# 3. Software
+# 4. End-user Needs
 ---
 # Integrated Population Models
 &lt;img src="/images/ipm.png" width="100%" /&gt;
@@ -266,25 +261,21 @@ class:inverse, middle, left
 ]
 ---
 
-# Producing Actionable Science
-&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;
-&lt;img src="/images/quote_manager.png" width="100%" /&gt;
-.footnote[Roux DJ, Rogers KH, Biggs H, Ashton PJ, Sergeant A. Bridging the science-management divide: Moving from unidirectional knowledge transfer to knowledge interfacing and sharing.]
-
+class: inverse, left, middle
+# 1. Data Integration
+# 2. __Integrated Population Models__
+# 3. Software
+# 4. End-user Needs
 ---
-
-# Translational Ecology
-"the best teams are interdisciplinary and include members of the end-user community"
-
+# Integrated Population Models
+&lt;img src="/images/ipm.png" width="100%" /&gt;
 ---
-class: inverse, center, middle
-# Fostering Communication Amongst Research, Practice, and Decision-making
-
+class: inverse, left, middle
+# 1. Data Integration
+# 2. Integrated Population Models
+# 3. __Software__
+# 4. __End-user Needs__
 ---
-
-
----
-&lt;!-- Lowndes, J.S.S., Best, B.D., Scarborough, C., Afflerbach, J.C., Frazier, M.R., O’Hara, C.C., Jiang, N. and Halpern, B.S., 2017. Our path to better science in less time using open data science tools. Nature ecology &amp; evolution, 1(6), p.0160. --&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
