--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -645,7 +645,8 @@ class: inverse, left, middle
 "highlightStyle": "github",
 "highlightLines": true,
 "slideNumberFormat": "%current%/%total%",
-"countIncrementalSlides": false
+"countIncrementalSlides": false,
+"ratio": "4:3"
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
