--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -4,7 +4,7 @@
     <title>&lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making Through Data Integration &amp; Software Development</title>
     <meta charset="utf-8" />
     <meta name="author" content="Jessica L. BurnettResearch Ecologist, Mendenhall Postdoctoral Fellow" />
-    <meta name="date" content="2019-10-13" />
+    <meta name="date" content="2019-10-14" />
     <link rel="stylesheet" href="css/myFonts.css" type="text/css" />
     <link rel="stylesheet" href="css/myTheme.css" type="text/css" />
   </head>
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 # &lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making Through Data Integration &amp; Software Development</font>
 ### <font size='12'><strong>Jessica L. Burnett</strong></font></br></br><font size='6'>Research Ecologist, Mendenhall Postdoctoral Fellow</font>
 ### Science Analytics and Synthesis | Core Science Systems</br>U.S. Geological Survey, Lakewood CO
-### October 13, 2019
+### October 14, 2019
 
 ---
 
@@ -25,6 +25,13 @@ background-size: 10%
 background-position: left 110px bottom 10px 
 ---
 
+
+# Indigienous People's Day
+&lt;/br&gt;&lt;/br&gt;
+.center[![](http://www.native-languages.org/images/florida.jpg)]
+???
+- extinct timicua
+---
 class: inverse, left, middle
 
 # Brief Overview of Past and Ongoing Research
@@ -100,7 +107,7 @@ class: inverse, left, middle
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide09.png" width="100%" /&gt;
 ]
-.footnote[[1] Burnett, J, N Gilbert, N Anich (_in prep_) Great Tit introductions to and distribution in North America. &lt;/br&gt;Burnett, J, L Wszola, N Mirochnitchenko, E Stuber, M Bomberger Brown, J Carroll (_in prep_). [2] Gray Partridge distribution in North America: Changing landscapes for an introduced species. For submission to _Wildlife Biology_ ]
+.footnote[[1] Burnett, J, N Gilbert, N Anich (_in prep_) Great Tit introductions to and distribution in North America. &lt;/br&gt;[2] Burnett, J, L Wszola, N Mirochnitchenko, E Stuber, M Bomberger Brown, J Carroll (_in prep_). Gray Partridge distribution in North America: Changing landscapes for an introduced species.]
 ???
 - And again using citizen science data to track the range shift and factors influencing the distrbution of the non-native Gray Partridge
 ---
@@ -297,7 +304,7 @@ class: inverse, left, middle
 
 # &lt;!--Roughgarden Quote--&gt;
 &lt;/br&gt;&lt;/br&gt;&lt;/br&gt;
-&gt; 'Most models in ecology are inteded for other ecologists, cooked up by scientists for consumption by other scientists'   _Roughgarden (1979)_  
+&gt; 'Most models in ecology are intended for other ecologists, cooked up by scientists for consumption by other scientists'   _Roughgarden (1979)_  
 
 .footnote[[1] Theory of population genetics and evolutionary ecology: an introduction.]
 ???
@@ -442,10 +449,6 @@ class: inverse, left, middle
 ???
 - So we start with the data integration
 ---
-# Integrated Population Models
-&lt;img src="/images/ipm.png" width="100%" /&gt;
----
-
 # Abundance Data: USGS Breeding Bird Survey
 .pull-left[
 &lt;img src="/images/bbs-logo.jpg" width="65%" /&gt;
