--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -331,9 +331,11 @@ class: inverse, left, middle
 ---
 class: inverse, left, middle
 # Avoiding the Linear Trajectory of Data and Science Products
-&lt;/br&gt;&lt;/br&gt;
---
-&lt;img src="/images/koolaid.jpg" width="20%" /&gt;
+&lt;!-- &lt;/br&gt;&lt;/br&gt; --&gt;
+&lt;!-- -- --&gt;
+&lt;!-- ```{r echo=FALSE, out.width='20%'} --&gt;
+&lt;!-- knitr::include_graphics('/images/koolaid.jpg') --&gt;
+&lt;!-- ``` --&gt;
 ---
 # USGS Science Analytics &amp; Synthesis
 &lt;/br&gt;
